--- a/Eclipse/Taplytics-Example/res/layout/code_experiments_layout.xml
+++ b/Eclipse/Taplytics-Example/res/layout/code_experiments_layout.xml
@@ -1,22 +1,22 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/com.taplytics.example"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:paddingBottom="10dp"
-    tools:context="com.taplytics.example.CodeExperimentsActivity" >
+    tools:context="com.taplytics.example.CodeExperimentsActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginBottom="10dp"
-        android:background="@android:color/white" >
+        android:background="@android:color/white">
 
         <RelativeLayout
             android:id="@+id/image_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/image_layout"
-            android:layout_marginTop="20dp" >
+            android:layout_marginTop="20dp">
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/code_experiments_what"
