--- a/Eclipse/Taplytics-Example/res/layout/main_layout.xml
+++ b/Eclipse/Taplytics-Example/res/layout/main_layout.xml
@@ -1,15 +1,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/com.taplytics.example"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/bg"
     android:paddingBottom="10dp"
-    tools:context="com.taplytics.example.MainActivity" >
+    tools:context="com.taplytics.example.MainActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView1"
@@ -46,8 +46,7 @@
             android:layout_marginTop="25dp"
             android:background="@color/grey"
             android:orientation="vertical"
-            android:visibility="invisible" >
-        </LinearLayout>
+            android:visibility="invisible"></LinearLayout>
 
         <com.taplytics.example.views.CustomFontsTextView
             android:id="@+id/source_explanation"
