--- a/AndroidStudio/TaplyticsExample/app/src/main/res/values-v11/styles.xml
+++ b/AndroidStudio/TaplyticsExample/app/src/main/res/values-v11/styles.xml
@@ -1,33 +1,11 @@
 <resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-        <item name="android:windowContentOverlay">@color/transparent</item>
     </style>
 
     <style name="MyTheme" parent="AppBaseTheme">
-        <item name="windowActionBarOverlay">true</item>
-        <item name="android:actionBarStyle">@style/MyTheme.ActionBarStyle</item>
-    </style>
-
-    <style name="MyTheme.ActionBarStyle" parent="style/Widget.AppCompat.Light.ActionBar">
-        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
-        <item name="android:background">@color/transparent</item>
-    </style>
-
-    <style name="MyTheme.ActionBar.TitleTextStyle" parent="style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:paddingLeft">15dp</item>
-    </style>
-
-    <style name="Theme.AppCompat.Light.NoActionBar" parent="@style/Theme.AppCompat.Light">
-        <item name="android:windowNoTitle">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
     </style>
 
 </resources>
