--- a/Eclipse/Taplytics-Example/res/drawable/logo.xml
+++ b/Eclipse/Taplytics-Example/res/drawable/logo.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:drawable="@drawable/icon_small"
+        android:drawable="@drawable/icon_smaller"
         android:left="5dp"
         android:right="10dp"/>
 
