--- a/Eclipse/Taplytics-Example/res/layout/code_experiments_layout.xml
+++ b/Eclipse/Taplytics-Example/res/layout/code_experiments_layout.xml
@@ -1,11 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:paddingBottom="10dp"
-    tools:context="com.taplytics.example.CodeExperimentsActivity">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:paddingBottom="10dp"
+            tools:context="com.taplytics.example.CodeExperimentsActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -25,7 +25,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image2" />
+                android:src="@drawable/image2"/>
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/title"
@@ -38,8 +38,18 @@
                 android:text="@string/code_experiments_button_text"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                app:fontName="avenir_bold.ttf" />
+                app:fontName="avenir_bold.ttf"/>
         </RelativeLayout>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/TaplyticsToolbar">
+        </android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:id="@+id/bottom_layout"
@@ -57,7 +67,7 @@
                 android:text="@string/what_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf" />
+                app:fontName="avenir.ttf"/>
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/code_experiments_text"
@@ -71,7 +81,7 @@
                 android:text="@string/code_experiment_text"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf" />
+                app:fontName="avenir.ttf"/>
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/code_experiments_action"
@@ -85,7 +95,7 @@
                 android:text="@string/in_action_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf" />
+                app:fontName="avenir.ttf"/>
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/code_experiments_action_text"
@@ -99,7 +109,7 @@
                 android:text="@string/code_experiment_action"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf" />
+                app:fontName="avenir.ttf"/>
         </RelativeLayout>
 
         <com.taplytics.example.views.CustomFontsButton
@@ -113,7 +123,7 @@
             android:background="@drawable/purple_button_state"
             android:text="@string/check_it_out"
             android:textColor="@android:color/white"
-            app:fontName="avenir.ttf" />
+            app:fontName="avenir.ttf"/>
     </RelativeLayout>
 
 </ScrollView>
