--- a/Eclipse/Taplytics-Example/res/values/styles.xml
+++ b/Eclipse/Taplytics-Example/res/values/styles.xml
@@ -1,33 +1,26 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-        <item name="android:windowContentOverlay">@color/transparent</item>
     </style>
 
     <style name="MyTheme" parent="AppBaseTheme">
-        <item name="windowActionBarOverlay">true</item>
-        <item name="actionBarStyle">@style/MyTheme.ActionBarStyle</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
     </style>
 
-    <style name="MyTheme.ActionBarStyle" parent="style/Widget.AppCompat.Light.ActionBar">
-        <item name="titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
+
+    <style name="TaplyticsToolbar" parent="Theme.AppCompat.NoActionBar">
+
+        <item name="android:textColorPrimary">@color/text_grey</item>
+
+        <item name="android:textColorPrimaryInverse">@color/text_grey</item>
+
+        <item name="actionMenuTextColor">@color/text_grey</item>
+
+        <item name="android:textColorSecondary">@color/switch_thumb_material_light</item>
+
         <item name="android:background">@color/transparent</item>
-    </style>
 
-    <style name="MyTheme.ActionBar.TitleTextStyle" parent="style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:paddingLeft">15dp</item>
-    </style>
-
-    <style name="Theme.AppCompat.Light.NoActionBar" parent="@style/Theme.AppCompat.Light">
-        <item name="android:windowNoTitle">true</item>
     </style>
 
 </resources>
