--- a/app/src/main/res/layout/code_block_layout.xml
+++ b/app/src/main/res/layout/code_block_layout.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:paddingBottom="10dp"
-    tools:context=".DynamicVariablesActivity">
+    tools:context=".CodeBlockActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -25,7 +25,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image4" />
+                android:src="@drawable/image2" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/title"
@@ -35,12 +35,11 @@
                 android:layout_marginTop="12dp"
                 android:gravity="center"
                 android:paddingTop="30dp"
-                android:text="@string/events_title"
+                android:text="@string/dynamic_variable_button_text"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 app:fontName="avenir_bold.ttf" />
         </RelativeLayout>
-
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -58,7 +57,7 @@
             android:layout_marginTop="20dp">
 
             <com.taplytics.example.views.CustomFontsTextView
-                android:id="@+id/events_what"
+                android:id="@+id/code_blocks_what"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
@@ -69,10 +68,10 @@
                 app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
-                android:id="@+id/events_text"
+                android:id="@+id/code_blocks_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/events_what"
+                android:layout_below="@+id/code_blocks_what"
                 android:layout_marginTop="10dp"
                 android:lineSpacingExtra="2dp"
                 android:paddingLeft="20dp"
@@ -83,10 +82,10 @@
                 app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
-                android:id="@+id/events_action"
+                android:id="@+id/code_blocks_action"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/events_text"
+                android:layout_below="@+id/code_blocks_text"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:paddingLeft="20dp"
@@ -97,22 +96,22 @@
                 app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
-                android:id="@+id/events_action_text"
+                android:id="@+id/code_blocks_action_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/events_action"
+                android:layout_below="@+id/code_blocks_action"
                 android:layout_marginTop="10dp"
                 android:lineSpacingExtra="2dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="@string/event_action"
+                android:text="@string/dynamic_variable_action"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
                 app:fontName="avenir.ttf" />
         </RelativeLayout>
 
         <com.taplytics.example.views.CustomFontsButton
-            android:id="@+id/events_send_button"
+            android:id="@+id/code_block_dialog_button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bottom_layout"
@@ -120,7 +119,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="50dp"
             android:background="@drawable/purple_button_state"
-            android:text="@string/send_an_event"
+            android:text="@string/check_it_out"
             android:textColor="@android:color/white"
             app:fontName="avenir.ttf" />
     </RelativeLayout>
