--- a/app/src/main/res/layout/user_attributes_layout.xml
+++ b/app/src/main/res/layout/user_attributes_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:paddingBottom="10dp"
-    tools:context="com.taplytics.example.CodeExperimentsActivity">
+    tools:context=".DynamicVariablesActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
